--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,8 +1,5 @@
 name: Deploy to Firebase Hosting on push
-on:
-  push:
-    branches:
-      - main
+'on': push
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -10,7 +7,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MILAN_BIBLE_QUIZ }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MILAN_BIBLE_QUIZ }}'
           channelId: live
           projectId: milan-bible-quiz
+          entryPoint: ./Milan-Bible-Quiz-
